# cognitive-data-arcade

./: .gitignore  LICENSE-CONTENT.md  README.md  SETUP.md  SETUP.pl.md  pyproject.toml
lessons/01_big_data/: README.md  README.pl.md  lesson_config.json  notes.md  notes.pl.md  tasks.md  tasks.pl.md  theory.md  theory.pl.md
lessons/02_reaction_time/: README.md  README.pl.md  lesson_config.json  notes.md  notes.pl.md  tasks.md  tasks.pl.md  theory.md  theory.pl.md
lessons/03_event_logs/: README.md  README.pl.md  notes.md  notes.pl.md  tasks.md  tasks.pl.md  theory.md  theory.pl.md
lessons/06_eda/: README.md  (+7 more)
scripts/: generate_audio.py
tests/: conftest.py  test_analysis_scene.py  test_app_tutorial_scene.py  test_audio.py  test_audio_profile.py  test_badges.py  test_big_data_map.py  test_chart_bridge.py  test_classifier_battle.py  test_cognitive_profile.py  test_context_popup.py  test_corr_menu.py  test_corr_scene.py  test_corr_simulator.py  test_dashboard_scene.py  test_dashboard_session.py  test_data_cleaning_generator.py  test_data_cleaning_menu.py  test_data_cleaning_scene.py  test_data_cleaning_widgets.py  test_difficulty.py  test_difficulty_config.py  test_display.py  test_distribution_scene.py  test_eda_simulator.py  test_eda_widgets.py  test_eld_game.py  test_eld_scenarios.py  test_event_log_level_scene.py  test_feature_hunter.py  test_flanker.py  test_flanker_analysis.py  test_flanker_analysis_scene.py  test_flanker_level_scene.py  test_game_info.py  test_game_loop.py  test_gono.py  test_gono_analysis.py  test_gono_analysis_scene.py  test_gono_level_scene.py  (+49 more)
(+210 files in other folders)
